<resources>
    <string name="app_name">Forget Me Not</string>
    <string name="welcomeText">Welcome to Forget Me Not!</string>
    <string name="button_next">Next</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_verify">Verify</string>
    <string name="button_resend">Resend</string>
    <string name="button_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm">Confirm</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">E-mail Address</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verify_number">Verify Number</string>
    <string name="error_password">Password must be at least 8 characters!</string>
    <string name="error_username">Username must be not empty!</string>
    <string name="error_invalid_email">Invalid E-mail address</string>
    <string name="error_sign_up_username">Username can\'t be empty</string>
    <string name="error_sign_up_email">E-mail address can\'t be empty</string>
    <string name="error_sign_up_password">Password can\'t be empty</string>
    <string name="error_sign_up_password_confirm">Password Confirmation can\'t be empty</string>
    <string name="error_sign_up_gender">Gender can\'t be empty</string>
    <string name="error_sign_up_number">Phone number can\'t be empty</string>
    <string name="helper_sign_up_username">You can use letters &amp; numbers</string>
    <string name="helper_sign_up_password">Password must have at least 8 digits</string>
    <string name="helper_sign_up_password_confirm">Re-enter password to confirm</string>
    <string name="bottom_bar_chat">Chat</string>
    <string name="bottom_bar_contacts">Contacts</string>
    <string name="bottom_bar_discovery">Discovery</string>
    <string name="bottom_bar_profile">Me</string>
    <string name="top_app_bar_search">Search</string>
    <string name="top_app_bar_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="artifact_hub">Hub</string>
    <string name="friends">Friends</string>
    <string name="artifact_management">Artifact Management</string>
    <string name="artifact_map">Footprint</string>
    <string name="artifact_event">Event</string>
    <string name="new_artifact">New Artifact</string>
    <string name="add_artifact_description_hint">Add description for your artifactItem. E.g.: memory you would like to mention</string>
    <string name="artifact_description_input">Your Artifact\'s Description:</string>
    <string name="artifact_when_happened_title">When Happened</string>
    <string name="artifact_where_happened_title">Where Happened</string>
    <string name="artifact_where_stored_title">Where Stored</string>
    <string name="artifact_choose_timeline">Choose Timeline</string>
    <string name="delete">Delete</string>
    <string name="preview_image">Preview and Add Image</string>
    <string name="new_artifact_activity_proceed_next_hint">At least one image/video to proceed.</string>
    <string name="not_enough_image_warning">At least one image to continue.</string>
    <string name="not_enough_location_warning">Please choose one location to continue.</string>
    <string name="new_artifact_new_timeline">New Timeline</string>
    <string name="new_artifact_existing_timeline">Existing Timeline</string>
    <string name="new_artifact_timeline_title_hint">Input your new timeline\'s title here.</string>
    <string name="new_artifact_new_timeline_empty_title_warning">New Artifact Timeline should has non-empty title!</string>
    <string name="new_artifact_timeline_exists_warning">New Timeline already created!</string>
    <string name="title_activity_maps">Map</string>
    <string name="option_get_place">Get current place</string>
    <string name="pick_place">Pick your place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="my_location_icon" translatable="false">My location icon</string>
    <string name="no_location">No Location</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="existing_timeline_spinner_prompt">Adding to existing timeline:</string>
    <string name="facebook_application_id" translatable="false">397146774529537</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb397146774529537</string>
    <string name="user_signed_in">Welcome: Signed In</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="auth_failure">Registration/Login failed.</string>
    <string name="please_choose_avatar">Please Choose Avatar:</string>
    <string name="pick_media">Pick media</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="nickname_hint">Nickname</string>
    <string name="event_my_title">My Attending Event</string>
    <string name="event_friend_title">Friend Event</string>
    <string name="my_artifact_items_title">My Artifact Items</string>
    <string name="my_artifact_timelines_title">My Artifact Timelines</string>
    <string name="event_recommended_title">Recommended Events</string>
    <string name="attend">Attend</string>
    <string name="choose_timeline_prompt">Choose Timeline to be displayed:</string>
    <string name="tips">Tips:</string>
    <string name="attend_dialog_content">Are you sure you want to attend this event?</string>
    <string name="cancel_dialog_content">Are you sure you want to cancel this event?</string>
    <string name="happened_time_not_choosen_warning">Please choose the time to continue</string>
    <string name="melbourne_museum_address">11 Nicholson St, Carlton VIC 3053</string>
    <string name="melbourne_museum">Melbourne Museum</string>
    <string name="melbourne_museum_description">A modern building founded in 1854 by public institutions, exhibiting dinosaurs and regional historical artifacts.</string>
    <string name="seven_seeds_address">114 Berkeley St, Carlton VIC 3053</string>
    <string name="seven_seeds_name">Seven Seeds Coffee Roasters</string>
    <string name="seven_seeds_description">The airy, industrial-style elegant cafe is also a mini-coffee bakery that serves brunch, salads and specialty teas throughout the day.</string>
    <string name="uyuni_address">Near the town of Uyuni, southwest of Bolivia</string>
    <string name="uyuni_name">Salar de Uyuni</string>
    <string name="uyuni_description">This is the world\'s largest salt flat. After the rain, the lake will become like a mirror, reflecting the seemingly suffocating sky of the earth, which many people call it the \'mirror of the sky\'.</string>
    <string name="oko_oko_address">644A Swanston St, Carlton VIC 3053</string>
    <string name="oko_oko_name">Oko Oko</string>
    <string name="oko_oko_description">Established in 2013, Oko Oko has been known by locals to make delicious and healthy Japanese style Oko pancakes, donburi rice dishes and seasonal ramen and udon noodles.</string>
    <string name="unimelb_address">Parkville VIC 3010</string>
    <string name="unimelb_name">University of Melbourne</string>
    <string name="unimelb_description">Founded in 1853, it has many campuses and graduate schools.</string>
    <string name="happened_time_not_chosen_warning">Please choose the time to continue</string>
    <string name="artifact_items_map_happened_title">Items Happened Map</string>
    <string name="artifact_items_map_stored_title">Items Stored Map</string>
    <string name="create_at">Create at: </string>
    <string name="description">Description: </string>
    <string name="locate_at">Locate at:</string>
    <string name="artifact_item_detail">Detail</string>
    <string name="artifact_timeline">Timeline</string>
    <string name="happen_at">Happened At: </string>
    <string name="post_hint">POST</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="comment">Comment</string>
    <string name="timeline">Timeline</string>
    <string name="detail">Detail</string>
    <string name="upload_at">Upload At: </string>
    <string name="stored_at">Stored At:</string>
    <string name="activity_friend_detail_username">Username</string>
    <string name="activity_friend_detail_user_item_number">Items</string>
    <string name="activity_friend_detail_user_timeline_number">Timelines</string>
    <string name="activity_friend_detail_user_friend_number">Friends</string>
    <string name="activity_friend_detail_phone_number">personal</string>
    <string name="activity_friend_detail_email_address">personal</string>
    <string name="friend_detail_menu_black_list">Add to black list</string>
    <string name="friend_detail_menu_delete">Delete</string>
    <string name="fragment_contact_friend_request">Friend Requests</string>
    <string name="ContactRequestActivity_title">New Friend Requests</string>
    <string name="friend_request_list_item_request_username">Username</string>
    <string name="friend_request_list_item_request_accept_button">Accept</string>
    <string name="ContactSearchActivity_title">Add new friend</string>
    <string name="activity_friend_search2_search_hint">Search username/email</string>
    <string name="no_result_view_text">This user doesn\'t exist  /(ㄒoㄒ)/~~</string>
    <string name="friend_list_item_username">Username</string>
    <string name="NewContactDetailActivity_add_button">Invitation Sent</string>
    <string name="activity_new_friend_detail_username_new">Username</string>
    <string name="activity_new_friend_detail_email_new">E-mail</string>
    <string name="activity_new_friend_detail_add_button">Add to contact list</string>
    <string name="my_timeline_recyclerview_item_title">Title</string>
    <string name="my_timeline_recyclerview_item_duration">Duration</string>
    <string name="my_timeline_recyclerview_item_create_time">Creation Time</string>
    <string name="artifact_map_title">Artifact Map Footprint</string>
    <string name="artifact_hub_title">Artifact Item Hub</string>
</resources>