<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/new_artifact_new_timeline_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/new_artifact_new_timeline"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/new_artifact_existing_timeline_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/new_artifact_existing_timeline"
            android:textSize="20sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/existing_timeline_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:prompt="@string/existing_timeline_spinner_prompt"
        android:theme="@style/SpinnerLargeText" />

    <EditText
        android:id="@+id/new_timeline_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="top"
        android:hint="@string/new_artifact_timeline_title_hint"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textSize="20sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_new_artifact_choose_timeline_floating_button_new_timeline_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_check_black"
        app:backgroundTint="@android:color/white"
        app:rippleColor="@color/primaryColor"
        app:tint="@color/primaryColor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_new_artifact_choose_timeline_floating_button_existing_timeline_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_check_black"
        app:backgroundTint="@android:color/white"
        app:rippleColor="@color/primaryColor"
        app:tint="@color/primaryColor" />

</LinearLayout>