<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_new"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="avatar"
            android:src="@drawable/default_avatar_list" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/avatar_new"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_new_friend_detail_username_new"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_new_friend_detail_email_new"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

    <include layout="@layout/small_divider" />

    <TextView
        android:id="@+id/add_friend"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/activity_new_friend_detail_add_button"
        android:textSize="25sp" />

    <include layout="@layout/line_divider" />

</LinearLayout>